<resources>
    <string name="app_name">Movie and Tv suggestions</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="nav_movies">Movies</string>
    <string name="nav_tv">Tv shows</string>
    <string name="nav_fav">Favorites</string>
    <string name="nav_random">Random</string>
    <string name="nav_coming_soon">Coming soon</string>

    <string name="sort_top">Order by best</string>
    <string name="sort_popular">Order by popular</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9909155562202230/5941204906</string>

    <string name="error_no_overview">No information available</string>

    <string name="genres">Genres</string>
    <string name="Action">Action</string>
    <string name="Adventure">Adventure</string>
    <string name="Animation">Animation</string>
    <string name="Comedy">Comedy</string>
    <string name="Crime">Crime</string>
    <string name="Documentary">Documentary</string>
    <string name="Drama">Drama</string>
    <string name="Family">Family</string>
    <string name="Fantasy">Fantasy</string>
    <string name="Foreign">Foreign</string>
    <string name="History">History</string>
    <string name="Horror">Horror</string>
    <string name="Music">Music</string>
    <string name="Mystery">Mystery</string>
    <string name="Romance">Romance</string>
    <string name="Science_Fiction">Science Fiction</string>
    <string name="TV_Movie">TV Movie</string>
    <string name="Thriller">Thriller</string>
    <string name="War">War</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="range">Year range</string>

    <string name="Actor_search">Actor search</string>
    <string name="Actor_name">Actor name</string>

    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="about_dialog_text">The Spanish translation was kindly provided by: octarino \nThis product uses the TMDb API but is not endorsed or certified by TMDb.\nwww.themoviedb.org</string>
    <string name="release_date">Release date</string>
    <string name="vote_average">Vote average</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="cast">Actors</string>
    <string name="advanced">Advanced search</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="Details">Details</string>
    <string name="Reviews">Reviews</string>
</resources>
