<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
           android:id="@+id/g3">
        <item
            android:id="@+id/nav_coming"
            android:title="@string/nav_coming_soon"
            android:icon="@drawable/ic_coming_soon"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g1">
        <item
            android:id="@+id/nav_movies"
            android:title="@string/nav_movies"
            android:icon="@drawable/ic_local_movies_black_24dp"/>
        <item
            android:id="@+id/nav_tv"
            android:title="@string/nav_tv"
            android:icon="@drawable/ic_tv_black_24dp"/>
        <item
            android:id="@+id/nav_favs"
            android:title="@string/nav_fav"
            android:icon="@drawable/ic_hearth_full"/>
    </group>

    <group android:id="@+id/g2"
           android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_random"
            android:title="@string/nav_random"
            android:icon="@drawable/ic_shuffle_black_24dp"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/advanced"
            android:icon="@drawable/ic_lens_black"/>
        <item
            android:id="@+id/footer_spacer_1"
            android:checkable="false"
            android:enabled="false"
            android:title="" />
        <item
            android:id="@+id/footer_spacer_2"
            android:checkable="false"
            android:enabled="false"
            android:title="" />
    </group>


</menu>
